--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/styles/index.css">
 </head>
   <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
